<resources>
    <string name="app_name">FilmSearcher</string>
    <string name="disclaimer">Постеры предоставлены movieposters.com</string>
    <string name="btn_menu">Меню</string>
    <string name="btn_favorite">Избранное</string>
    <string name="btn_watch_later">Посмотреть позже</string>
    <string name="btn_selected">Подборки</string>
    <string name="btn_options">Настройки</string>
</resources>